--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 		  <h2>&nbsp;&nbsp;&nbsp;- &nbsp;ภาคเรียนปลาย ปีการศึกษา 2566<a href="CE65-2-2566.html" target="_blank" >&nbsp;(Click)</a></h2>
 		  <h2>&nbsp;&nbsp;&nbsp;- &nbsp;ภาคเรียนต้น ปีการศึกษา 2567<a href="CE65-1-2567.html" target="_blank" >&nbsp;(Click)</a></h2>
 		  </td>
-		  </tr>
+		  </tr>		  
 		  </tbody>
 		  </table>
+		  <h3><a href="readme.png" target="_blank" >&nbsp;วิธีเปิดด้วย browser (จาก  LINE)</a></h3>
         </body>
       </html>
