--- a/CE60-1-2567.html
+++ b/CE60-1-2567.html
@@ -95,58 +95,58 @@
           </thead>
           <tbody><tr><td>           304100 </td>
               <td align="left"> Essential Math. for CE </td>
-              <td> <input type="checkbox" name="subjects" value='["304100","Essential Math. for CE","https://docs.google.com/forms/d/e/1FAIpQLSfqYet3Mv3e98oTGiqcne1B6Aaql6ZaYqQku9P9txWlWkQ1mA/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304100","Essential Math. for CE","https://docs.google.com/forms/d/e/1FAIpQLSfqYet3Mv3e98oTGiqcne1B6Aaql6ZaYqQku9P9txWlWkQ1mA/viewform","https://docs.google.com/forms/d/e/1FAIpQLScRU547VXuQR5T7iKIGSqv1pPdhpQfelQ6XhRetftiBtcsnvw/viewform"]'></td>
             </tr><tr><td>           304211 </td>
               <td align="left"> Mechanics of Materials I </td>
-              <td> <input type="checkbox" name="subjects" value='["304211","Mechanics of Materials I","https://docs.google.com/forms/d/e/1FAIpQLSc7Ukfa4RTqqf2Nmq7XyzqFX6PYpeadqjF-MTObvqu_QpwXUw/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304211","Mechanics of Materials I","https://docs.google.com/forms/d/e/1FAIpQLSc7Ukfa4RTqqf2Nmq7XyzqFX6PYpeadqjF-MTObvqu_QpwXUw/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdoH2xd4aLU-UboWq7H7YMbhJTCGMmiix4sxUPdnKx9JdCcZw/viewform"]'></td>
             </tr><tr><td>           304212 </td>
               <td align="left"> Structural Analysis I </td>
-              <td> <input type="checkbox" name="subjects" value='["304212","Structural Analysis I","https://docs.google.com/forms/d/e/1FAIpQLSfGW2cWI7zBfjMMzfqulf5F2PNr-rS0nDI9WIfvtgzT1wYwTA/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304212","Structural Analysis I","https://docs.google.com/forms/d/e/1FAIpQLSfGW2cWI7zBfjMMzfqulf5F2PNr-rS0nDI9WIfvtgzT1wYwTA/viewform","https://docs.google.com/forms/d/e/1FAIpQLSfkC_WyAiLPl83l6mrNVFsUysocXIf4baFK_cMa3X-BqbHFBQ/viewform"]'></td>
             </tr><tr><td>           304231 </td>
               <td align="left"> Surveying </td>
-              <td> <input type="checkbox" name="subjects" value='["304231","Surveying","https://docs.google.com/forms/d/e/1FAIpQLSchG5m0h3r3u3yB46qX1tO2tNOAOldtcW-z_wq8eLc6Ne1utQ/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304231","Surveying","https://docs.google.com/forms/d/e/1FAIpQLSchG5m0h3r3u3yB46qX1tO2tNOAOldtcW-z_wq8eLc6Ne1utQ/viewform","https://docs.google.com/forms/d/e/1FAIpQLScw9QKTysKuUxZpqz08K3TjLkZ_MedRh4s65MGhwc1BgaWcFw/viewform"]'></td>
             </tr><tr><td>           304301 </td>
               <td align="left"> Applied Mathematics for CE </td>
-              <td> <input type="checkbox" name="subjects" value='["304301","Applied Mathematics for CE","https://docs.google.com/forms/d/e/1FAIpQLScmKPx7Tn8MLtN3d13YEtKjC5_doOzfgzXn6A_OoR3pEwofJQ/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304301","Applied Mathematics for CE","https://docs.google.com/forms/d/e/1FAIpQLScmKPx7Tn8MLtN3d13YEtKjC5_doOzfgzXn6A_OoR3pEwofJQ/viewform","https://docs.google.com/forms/d/e/1FAIpQLSesSfSxFLePbUEiD-1GNs63qgnwgRL1-idcJdmrrbZjXaRacg/viewform"]'></td>
             </tr><tr><td>           304314 </td>
               <td align="left"> Structural Analysis II </td>
-              <td> <input type="checkbox" name="subjects" value='["304314","Structural Analysis II","https://docs.google.com/forms/d/e/1FAIpQLSfvWxLJ8IiOlyT7agEkkgMW5XrImXDayKz7KHiKw0drwL8TPw/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304314","Structural Analysis II","https://docs.google.com/forms/d/e/1FAIpQLSfvWxLJ8IiOlyT7agEkkgMW5XrImXDayKz7KHiKw0drwL8TPw/viewform","https://docs.google.com/forms/d/e/1FAIpQLSfhzFJYviHjDVD450GNQxtAAvxfaVrE6d-87lKYacqUU8rLWg/viewform"]'></td>
             </tr><tr><td>           304322 </td>
               <td align="left"> Concrete Technology </td>
-              <td> <input type="checkbox" name="subjects" value='["304322","Concrete Technology","https://docs.google.com/forms/d/e/1FAIpQLScZMhnutdLa81bu1BY13GTwMr1LqmipM35BYQBu4EicBrZx_Q/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304322","Concrete Technology","https://docs.google.com/forms/d/e/1FAIpQLScZMhnutdLa81bu1BY13GTwMr1LqmipM35BYQBu4EicBrZx_Q/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdPj8pmjWOhguCHssRZEL6_FlC0fr98dDvHfDyJcoFGo9qzRg/viewform"]'></td>
             </tr><tr><td>           304344 </td>
               <td align="left"> Principle of Hydrology </td>
-              <td> <input type="checkbox" name="subjects" value='["304344","Principle of Hydrology","https://docs.google.com/forms/d/e/1FAIpQLSde4v-AG2GjrhGJe1n238vsx9zli52RA4AiimAHDlr9RXsfXA/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304344","Principle of Hydrology","https://docs.google.com/forms/d/e/1FAIpQLSde4v-AG2GjrhGJe1n238vsx9zli52RA4AiimAHDlr9RXsfXA/viewform","https://docs.google.com/forms/d/e/1FAIpQLSfciFUZN7u_pHtuuI80nmcXgjEG8r5NUw0k0mJzscwk9eorPQ/viewform"]'></td>
             </tr><tr><td>           304351 </td>
               <td align="left"> Soil Mechanics </td>
-              <td> <input type="checkbox" name="subjects" value='["304351","Soil Mechanics","https://docs.google.com/forms/d/e/1FAIpQLSfRSdn8hNoSTqaPNHHQOZAATmboix5xgZ6mXEA0fBNd4nJ2vw/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304351","Soil Mechanics","https://docs.google.com/forms/d/e/1FAIpQLSfRSdn8hNoSTqaPNHHQOZAATmboix5xgZ6mXEA0fBNd4nJ2vw/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdKmPcTtaMCfmBNtKOt6kYISK1uI1bNluVO3fUbGj4Fk8GGdg/viewform"]'></td>
             </tr><tr><td>           304352 </td>
               <td align="left"> Soil Mechanics Laboratory </td>
-              <td> <input type="checkbox" name="subjects" value='["304352","Soil Mechanics Laboratory","https://docs.google.com/forms/d/e/1FAIpQLSdlX6vQ80MmKbiwJzagbhC23ND3zM7C2Uw2c6jwNup305-9ag/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304352","Soil Mechanics Laboratory","https://docs.google.com/forms/d/e/1FAIpQLSdlX6vQ80MmKbiwJzagbhC23ND3zM7C2Uw2c6jwNup305-9ag/viewform","https://docs.google.com/forms/d/e/1FAIpQLSd8CBATwMlLUGGAq4kgfwp7a7BoNZkMot-8mXtA3tTWw1G7Jg/viewform"]'></td>
             </tr><tr><td>           304315 </td>
               <td align="left"> Reinforced Concrete Design </td>
-              <td> <input type="checkbox" name="subjects" value='["304315","Reinforced Concrete Design","https://docs.google.com/forms/d/e/1FAIpQLSesgVKernLSzN6LD_EcFd2rpnSNyOxcqAE_G7g6S0RZTGyl5g/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304315","Reinforced Concrete Design","https://docs.google.com/forms/d/e/1FAIpQLSesgVKernLSzN6LD_EcFd2rpnSNyOxcqAE_G7g6S0RZTGyl5g/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdwXnI5sRokb_g9aQC8033u_E36S4vCkeQpBzzebC3jAot3gw/viewform"]'></td>
             </tr><tr><td>           304345 </td>
               <td align="left"> Hydraulic Engineering </td>
-              <td> <input type="checkbox" name="subjects" value='["304345","Hydraulic Engineering","https://docs.google.com/forms/d/e/1FAIpQLSfcHN9NkIijBBUYDGvxK30tITeVfXbU-NORynimPaWEVLF0lw/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304345","Hydraulic Engineering","https://docs.google.com/forms/d/e/1FAIpQLSfcHN9NkIijBBUYDGvxK30tITeVfXbU-NORynimPaWEVLF0lw/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdl1S0BFOQ69clRBDTQjO_t9gc4WilSrvSGsiJOih2hu5VoNA/viewform"]'></td>
             </tr><tr><td>           304417 </td>
               <td align="left"> Design of Timber and Steel Structures </td>
-              <td> <input type="checkbox" name="subjects" value='["304417","Design of Timber and Steel Structures","https://docs.google.com/forms/d/e/1FAIpQLSeHKGPUMIGUYUp6LoyZEi8Rs49LSeAr5qPh8q6vHuCITbsSDg/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304417","Design of Timber and Steel Structures","https://docs.google.com/forms/d/e/1FAIpQLSeHKGPUMIGUYUp6LoyZEi8Rs49LSeAr5qPh8q6vHuCITbsSDg/viewform","https://docs.google.com/forms/d/e/1FAIpQLSdYAA1Tqs9cPbG5ussM_lpbAGMH7Bxo7ZsObwoDIYRx7Uj7zQ/viewform"]'></td>
             </tr><tr><td>           304433 </td>
               <td align="left"> Transportation Engineering </td>
-              <td> <input type="checkbox" name="subjects" value='["304433","Transportation Engineering","https://docs.google.com/forms/d/e/1FAIpQLSdjgU-fTWejW-ZMLa_wMB9cLcCwMXoct2MsF1IL86duPdtrZg/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304433","Transportation Engineering","https://docs.google.com/forms/d/e/1FAIpQLSdjgU-fTWejW-ZMLa_wMB9cLcCwMXoct2MsF1IL86duPdtrZg/viewform","https://docs.google.com/forms/d/e/1FAIpQLSd-8-P-O_LBU5zozuzxPg3IsD8uq_weQa2rbWPW3N38Qy7tgw/viewform"]'></td>
             </tr><tr><td>           304491 </td>
               <td align="left"> Civil Engineering Pre-project </td>
-              <td> <input type="checkbox" name="subjects" value='["304491","Civil Engineering Pre-project","https://docs.google.com/forms/d/e/1FAIpQLSe4SQziAUn5TsvY61dR_O1uO2DxRmJ8DNunyCVgezva8uBmFA/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304491","Civil Engineering Pre-project","https://docs.google.com/forms/d/e/1FAIpQLSe4SQziAUn5TsvY61dR_O1uO2DxRmJ8DNunyCVgezva8uBmFA/viewform","https://docs.google.com/forms/d/e/1FAIpQLSetHNE_p7GPTUn1PmfTLYMPaJ2G8R81ka4mzzytgCzLFmDerA/viewform"]'></td>
             </tr><tr><td>           304411 </td>
               <td align="left"> Mechanical Behavior of Materials </td>
-              <td> <input type="checkbox" name="subjects" value='["304411","Mechanical Behavior of Materials","https://docs.google.com/forms/d/e/1FAIpQLSdYnJmxhbcFFWe-tovR4cT_sKBbgeFcbBN0KB_Wv0AdD0CzOA/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304411","Mechanical Behavior of Materials","https://docs.google.com/forms/d/e/1FAIpQLSdYnJmxhbcFFWe-tovR4cT_sKBbgeFcbBN0KB_Wv0AdD0CzOA/viewform","https://docs.google.com/forms/d/e/1FAIpQLSejQ1iLBuog9acaF-hBb5QUo0WPsVdGDII1z0awkzb4KM8ePw/viewform"]'></td>
             </tr><tr><td>           304419 </td>
               <td align="left"> Building Design </td>
-              <td> <input type="checkbox" name="subjects" value='["304419","Building Design","https://docs.google.com/forms/d/e/1FAIpQLSezhcrqj0E4l3y24H8vNL9qS3dtLqBBSkwcxEp0K2XdMGQ-gw/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304419","Building Design","https://docs.google.com/forms/d/e/1FAIpQLSezhcrqj0E4l3y24H8vNL9qS3dtLqBBSkwcxEp0K2XdMGQ-gw/viewform","https://docs.google.com/forms/d/e/1FAIpQLSfkhUzKIeKvv98GaNnlmGHl_-S-nkKhJoQu-jsGWrHTtY2IfQ/viewform"]'></td>
             </tr><tr><td>           304461 </td>
               <td align="left"> Selected Topics in Civil Engineering </td>
-              <td> <input type="checkbox" name="subjects" value='["304461","Selected Topics in Civil Engineering","https://docs.google.com/forms/d/e/1FAIpQLSft6zWJHbHIjS81ZV820y0Pq0OO3SUxRSpfwtk-nNT4sHY26w/viewform",""]'></td>
+              <td> <input type="checkbox" name="subjects" value='["304461","Selected Topics in Civil Engineering","https://docs.google.com/forms/d/e/1FAIpQLSft6zWJHbHIjS81ZV820y0Pq0OO3SUxRSpfwtk-nNT4sHY26w/viewform","https://docs.google.com/forms/d/e/1FAIpQLSfklgefthhEoip4oTzAIB92-k5jue_9eXTmd4ide80GiCtlIg/viewform"]'></td>
             </tr>
           </tbody>
           </table> 
